WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293912
REGRESSION (
294860@main
): STTF highlight flickers when opening link.
https://bugs.webkit.org/show_bug.cgi?id=293912
Summary
REGRESSION (294860@main): STTF highlight flickers when opening link.
Megan Gardner
Reported
2025-06-02 11:20:08 PDT
STTF highlight flickers when opening link.
Attachments
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2025-06-02 11:20:09 PDT
<
rdar://problem/151939787
>
Megan Gardner
Comment 2
2025-06-02 11:23:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46215
EWS
Comment 3
2025-06-02 12:28:11 PDT
Committed
295705@main
(07afd6e01e0f): <
https://commits.webkit.org/295705@main
> Reviewed commits have been landed. Closing PR #46215 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug