STTF highlight flickers when opening link. https://bugs.webkit.org/show_bug.cgi?id=293912 rdar://151939787

Reviewed by Tim Horton.

When moving this code around a few weeks ago
I for some reason just set the text indicator
on an update instead of actually updating it.
This would cause the text indicator to start over
on each set, causing a significant flicker. We should
actually be calling update on an update, which fixes
the problem by not restarting the animation and allowing
the indicator to finish animating and fading away.

* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::updateTextIndicator):

Canonical link: https://commits.webkit.org/295705@main